# EDNMS

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINE_ARCHITECTURE.md  FEATURE_MATRIX.md  GAME_DESIGN.md  IMPLEMENTATION_SUMMARY.md  MODULAR_SHIPS.md  NARRATIVE_DESIGN.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL_SPECS.md  ednms.txt  modular ship.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Engine/Core/: Log.cpp  Log.h
Engine/ECS/: components.h  ecs_component_mask.h  ecs_registry.h  ecs_types.h
Engine/IO/: chunk_format.h
Engine/Math/: Vec3d.cpp  Vec3d.h
Game/: main.cpp
Simulation/World/: Chunk.cpp  Chunk.h
Tests/: test_chunk_format.cpp  test_components.cpp  test_ecs.cpp  test_framework.h  test_main.cpp  test_math.cpp
_codeql_build_dir/: CTestTestfile.cmake  EDNMS  EDNMSTests
